{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 43,
  "lineage": "2f241ef6-7341-7152-3e6c-68349f963cac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:185984338510:security-group/sg-0491e9e720c55621c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0491e9e720c55621c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/20"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "uat-helloworld-eks-master",
            "name_prefix": "",
            "owner_id": "185984338510",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cost-Center": "devops",
              "Environment": "uat",
              "Name": "uat-helloworld-eks-master-sg",
              "Owner": "SE",
              "Project": "helloworld",
              "ResourceType": "sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-059344408783a35c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:185984338510:security-group/sg-0f84752ba5c3b8472",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f84752ba5c3b8472",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "uat-helloworld-eks-worker",
            "name_prefix": "",
            "owner_id": "185984338510",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cost-Center": "devops",
              "Environment": "uat",
              "Name": "uat-helloworld-eks-worker-sg",
              "Owner": "SE",
              "Project": "helloworld",
              "ResourceType": "sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-059344408783a35c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-02c2c36891ab32310",
            "domain": "vpc",
            "id": "eipalloc-0d314509ebbd9b5c3",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0ec5d04b00994dd8b",
            "private_dns": "ip-10-0-4-78.ap-southeast-1.compute.internal",
            "private_ip": "10.0.4.78",
            "public_dns": "ec2-52-220-70-94.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.220.70.94",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Cost-Center": "devops",
              "Environment": "uat",
              "Name": "uat-helloworld-eip",
              "Owner": "SE",
              "Project": "helloworld",
              "ResourceType": "EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:185984338510:internet-gateway/igw-0da2063b8caf35616",
            "id": "igw-0da2063b8caf35616",
            "owner_id": "185984338510",
            "tags": {
              "Cost-Center": "devops",
              "Environment": "uat",
              "Name": "uat-helloworld-igw",
              "Owner": "SE",
              "Project": "helloworld",
              "ResourceType": "IGW"
            },
            "vpc_id": "vpc-059344408783a35c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d314509ebbd9b5c3",
            "id": "nat-05385be3769d37a53",
            "network_interface_id": "eni-0ec5d04b00994dd8b",
            "private_ip": "10.0.4.78",
            "public_ip": "52.220.70.94",
            "subnet_id": "subnet-0d367be30ef5a400c",
            "tags": {
              "Cost-Center": "devops",
              "Environment": "uat",
              "Name": "uat-helloworld-nat-gw",
              "Owner": "SE",
              "Project": "helloworld",
              "ResourceType": "NAT GW"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0da2063b8caf35616",
            "id": "r-rtb-0f62f46730866cfae1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f62f46730866cfae",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f680285189b1d9f71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05385be3769d37a53",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f680285189b1d9f7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:185984338510:route-table/rtb-0f680285189b1d9f7",
            "id": "rtb-0f680285189b1d9f7",
            "owner_id": "185984338510",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05385be3769d37a53",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Cost-Center": "devops",
              "Environment": "uat",
              "Name": "uat-helloworld-private",
              "Owner": "SE",
              "Project": "helloworld",
              "ResourceType": "ROUTE-TABLE"
            },
            "vpc_id": "vpc-059344408783a35c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:185984338510:route-table/rtb-0f62f46730866cfae",
            "id": "rtb-0f62f46730866cfae",
            "owner_id": "185984338510",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0da2063b8caf35616",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Cost-Center": "devops",
              "Environment": "uat",
              "Name": "uat-helloworld-public",
              "Owner": "SE",
              "Project": "helloworld",
              "ResourceType": "ROUTE-TABLE"
            },
            "vpc_id": "vpc-059344408783a35c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9752c465a1073c5",
            "route_table_id": "rtb-0f680285189b1d9f7",
            "subnet_id": "subnet-0176c085db73f6e37"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0238ad194f27575bb",
            "route_table_id": "rtb-0f680285189b1d9f7",
            "subnet_id": "subnet-0ee3dcad12d2e68a1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0431d5b2dab2ec735",
            "route_table_id": "rtb-0f680285189b1d9f7",
            "subnet_id": "subnet-0f625d59fc618fc17"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.4.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4016aa186d9045e",
            "route_table_id": "rtb-0f62f46730866cfae",
            "subnet_id": "subnet-0d367be30ef5a400c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.0.5.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b6f8bcab7463860",
            "route_table_id": "rtb-0f62f46730866cfae",
            "subnet_id": "subnet-0c2e66b824e100d89"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.0.6.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df1463e4c67539b7",
            "route_table_id": "rtb-0f62f46730866cfae",
            "subnet_id": "subnet-0141d169425c3ae6c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:185984338510:subnet/subnet-0176c085db73f6e37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0176c085db73f6e37",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "185984338510",
            "tags": {
              "Cost-Center": "devops",
              "Environment": "uat",
              "Name": "uat-helloworld-private-ap-southeast-1a",
              "Owner": "SE",
              "Project": "helloworld",
              "ResourceType": "SUBNET",
              "kubernetes.io/cluster/uat-helloworld-eks-cluster": "shared"
            },
            "tags_all": {
              "Cost-Center": "devops",
              "Environment": "uat",
              "Name": "uat-helloworld-private-ap-southeast-1a",
              "Owner": "SE",
              "Project": "helloworld",
              "ResourceType": "SUBNET",
              "kubernetes.io/cluster/uat-helloworld-eks-cluster": "shared"
            },
            "vpc_id": "vpc-059344408783a35c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:185984338510:subnet/subnet-0ee3dcad12d2e68a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0ee3dcad12d2e68a1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "185984338510",
            "tags": {
              "Cost-Center": "devops",
              "Environment": "uat",
              "Name": "uat-helloworld-private-ap-southeast-1b",
              "Owner": "SE",
              "Project": "helloworld",
              "ResourceType": "SUBNET",
              "kubernetes.io/cluster/uat-helloworld-eks-cluster": "shared"
            },
            "tags_all": {
              "Cost-Center": "devops",
              "Environment": "uat",
              "Name": "uat-helloworld-private-ap-southeast-1b",
              "Owner": "SE",
              "Project": "helloworld",
              "ResourceType": "SUBNET",
              "kubernetes.io/cluster/uat-helloworld-eks-cluster": "shared"
            },
            "vpc_id": "vpc-059344408783a35c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:185984338510:subnet/subnet-0f625d59fc618fc17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0f625d59fc618fc17",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "185984338510",
            "tags": {
              "Cost-Center": "devops",
              "Environment": "uat",
              "Name": "uat-helloworld-private-ap-southeast-1c",
              "Owner": "SE",
              "Project": "helloworld",
              "ResourceType": "SUBNET",
              "kubernetes.io/cluster/uat-helloworld-eks-cluster": "shared"
            },
            "tags_all": {
              "Cost-Center": "devops",
              "Environment": "uat",
              "Name": "uat-helloworld-private-ap-southeast-1c",
              "Owner": "SE",
              "Project": "helloworld",
              "ResourceType": "SUBNET",
              "kubernetes.io/cluster/uat-helloworld-eks-cluster": "shared"
            },
            "vpc_id": "vpc-059344408783a35c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.4.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:185984338510:subnet/subnet-0d367be30ef5a400c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0d367be30ef5a400c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "185984338510",
            "tags": {
              "Cost-Center": "devops",
              "Environment": "uat",
              "Name": "uat-helloworld-public-ap-southeast-1a",
              "Owner": "SE",
              "Project": "helloworld",
              "ResourceType": "SUBNET"
            },
            "tags_all": {
              "Cost-Center": "devops",
              "Environment": "uat",
              "Name": "uat-helloworld-public-ap-southeast-1a",
              "Owner": "SE",
              "Project": "helloworld",
              "ResourceType": "SUBNET"
            },
            "vpc_id": "vpc-059344408783a35c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.0.5.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:185984338510:subnet/subnet-0c2e66b824e100d89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0c2e66b824e100d89",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "185984338510",
            "tags": {
              "Cost-Center": "devops",
              "Environment": "uat",
              "Name": "uat-helloworld-public-ap-southeast-1b",
              "Owner": "SE",
              "Project": "helloworld",
              "ResourceType": "SUBNET"
            },
            "tags_all": {
              "Cost-Center": "devops",
              "Environment": "uat",
              "Name": "uat-helloworld-public-ap-southeast-1b",
              "Owner": "SE",
              "Project": "helloworld",
              "ResourceType": "SUBNET"
            },
            "vpc_id": "vpc-059344408783a35c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.0.6.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:185984338510:subnet/subnet-0141d169425c3ae6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0141d169425c3ae6c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "185984338510",
            "tags": {
              "Cost-Center": "devops",
              "Environment": "uat",
              "Name": "uat-helloworld-public-ap-southeast-1c",
              "Owner": "SE",
              "Project": "helloworld",
              "ResourceType": "SUBNET"
            },
            "tags_all": {
              "Cost-Center": "devops",
              "Environment": "uat",
              "Name": "uat-helloworld-public-ap-southeast-1c",
              "Owner": "SE",
              "Project": "helloworld",
              "ResourceType": "SUBNET"
            },
            "vpc_id": "vpc-059344408783a35c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:185984338510:vpc/vpc-059344408783a35c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0b7fc33484e938dde",
            "default_route_table_id": "rtb-0df33670e5b43e84c",
            "default_security_group_id": "sg-06da3c2b75c88c3b4",
            "dhcp_options_id": "dopt-926c33f5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-059344408783a35c9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0df33670e5b43e84c",
            "owner_id": "185984338510",
            "tags": {
              "Cost-Center": "devops",
              "Environment": "uat",
              "Name": "uat-helloworld-vpc",
              "Owner": "SE",
              "Project": "helloworld",
              "ResourceType": "VPC"
            },
            "tags_all": {
              "Cost-Center": "devops",
              "Environment": "uat",
              "Name": "uat-helloworld-vpc",
              "Owner": "SE",
              "Project": "helloworld",
              "ResourceType": "VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}